--- a/01-Python-Functions/01-Python-Functions.ipynb
+++ b/01-Python-Functions/01-Python-Functions.ipynb
@@ -37,6 +37,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2020-01-06T00:45:30.234Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "n = input()\n",
+    "if n%2 == 0:\n",
+    "    print('even')\n",
+    "else:\n",
+    "    print(\"odd\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
