adding a new folder from stackskills leacture

--- a/01-Python-Functions/01-Python-Functions.ipynb
+++ b/01-Python-Functions/01-Python-Functions.ipynb
@@ -36,19 +36,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2020-01-06T00:45:30.234Z"
+     "end_time": "2020-02-28T21:03:14.184591Z",
+     "start_time": "2020-02-28T21:03:11.885886Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "even\n"
+     ]
+    }
+   ],
    "source": [
-    "n = input()\n",
+    "n = int(input())\n",
     "if n%2 == 0:\n",
     "    print('even')\n",
     "else:\n",
     "    print(\"odd\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Variables"
    ]
   },
   {
