--- a/StackSkills/Deep-Learning-Masterclass/Variables.ipynb
+++ b/StackSkills/Deep-Learning-Masterclass/Variables.ipynb
@@ -151,7 +151,82 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## If Statement"
+    "## If Statement\n",
+    "```python\n",
+    "if condition == True:\n",
+    "    execute code block here\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## While and For In Loops \n",
+    "```python \n",
+    "for element in lst:\n",
+    "    print(element)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Function Implementation and Execution\n",
+    "functions without parameters or return values\n",
+    "```python \n",
+    "def name():\n",
+    "    function body \n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-04T23:03:07.032559Z",
+     "start_time": "2020-03-04T23:03:07.019806Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hulk is getting angrier\n",
+      "Hulk is getting angrier\n",
+      "Hulk is getting angrier\n",
+      "0.9999999999999999\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "range_factor = 0.7\n",
+    "is_in_hulk_form = False\n",
+    "\n",
+    "def increase_range():\n",
+    "    global range_factor \n",
+    "    global is_in_hulk_form\n",
+    "    range_factor += 0.1\n",
+    "    if range_factor > 0.9:\n",
+    "        is_in_hulk_form = True\n",
+    "    print(\"Hulk is getting angrier\")\n",
+    "        \n",
+    "increase_range()\n",
+    "increase_range()\n",
+    "increase_range()\n",
+    "print(range_factor)\n",
+    "print(is_in_hulk_form)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Parameters and Return Values"
    ]
   },
   {
