updated stackskill notebook

--- a/StackSkills/Deep-Learning-Masterclass/Variables.ipynb
+++ b/StackSkills/Deep-Learning-Masterclass/Variables.ipynb
@@ -230,6 +230,88 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Class and Objects\n",
+    "an object is an entity in the code that maintain it track or state and has certain behavior(method).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-05T04:37:50.069251Z",
+     "start_time": "2020-03-05T04:37:50.063503Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class SuperHero:\n",
+    "    \n",
+    "    team = 'Avengers'\n",
+    "    \n",
+    "    def __init__(self, name, health):\n",
+    "        self.name = name \n",
+    "        self.health = health\n",
+    "        \n",
+    "    def take_damage(self, amount):\n",
+    "        self.health = amount    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-05T04:56:03.046736Z",
+     "start_time": "2020-03-05T04:56:03.033150Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Avengers\n",
+      "sis\n",
+      "40\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inst = SuperHero('sis', 40)\n",
+    "print(inst.team)\n",
+    "print(inst.name)\n",
+    "print(inst.health)\n",
+    "inst.take_damage(20)\n",
+    "inst.health"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-05T04:37:52.690294Z",
+     "start_time": "2020-03-05T04:37:52.683371Z"
+    }
+   },
+   "source": [
+    "## Subclasses and Superclasses"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
