adding new ML notebook

--- a/ML-Models/ML-functions.ipynb
+++ b/ML-Models/ML-functions.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 62,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-02T17:19:01.777887Z",
-     "start_time": "2020-03-02T17:19:01.773626Z"
+     "end_time": "2020-03-16T15:15:39.932212Z",
+     "start_time": "2020-03-16T15:15:39.890550Z"
     }
    },
    "outputs": [],
@@ -23,11 +23,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 63,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-02T17:26:07.897054Z",
-     "start_time": "2020-03-02T17:26:07.886219Z"
+     "end_time": "2020-03-16T15:15:41.248578Z",
+     "start_time": "2020-03-16T15:15:41.224071Z"
     }
    },
    "outputs": [
@@ -37,7 +37,7 @@
        "[1, 2, 5]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,11 +98,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 64,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-02T17:26:39.436989Z",
-     "start_time": "2020-03-02T17:26:39.426705Z"
+     "end_time": "2020-03-16T15:20:59.851029Z",
+     "start_time": "2020-03-16T15:20:59.841808Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def duplicates(element_lst):\n",
+    "    dups = dict()\n",
+    "    for i in element_lst:\n",
+    "        if i not in dups:\n",
+    "            dups[i] = 1\n",
+    "        else:\n",
+    "            dups[i] += 1\n",
+    "    return dups"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-03-16T15:21:20.898271Z",
+     "start_time": "2020-03-16T15:21:20.867960Z"
     }
    },
    "outputs": [
@@ -112,28 +133,22 @@
        "{1: 2, 2: 2, 3: 1, 5: 4, 6: 1}"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dups = dict()\n",
-    "for i in lst:\n",
-    "    if i not in dups:\n",
-    "        dups[i] = 1\n",
-    "    else:\n",
-    "        dups[i] += 1\n",
-    "dups"
+    "duplicates(lst)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 60,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-11T00:28:08.717514Z",
-     "start_time": "2020-03-11T00:28:08.645753Z"
+     "end_time": "2020-03-11T00:29:11.207409Z",
+     "start_time": "2020-03-11T00:29:11.201746Z"
     }
    },
    "outputs": [],
